# 2023-telegram-bot-workshop

./: .env.example  .gitignore  README.md  pyproject.toml
tg_bot/: bot.py
